# learn-crawler

./: .gitignore  CLAUDE.md  README.md  REAME.md  analyze_rps_dicom.py  elektafdt_crawler.py  learn_upload.spec  pyproject.toml  requirements-dev.txt  run_patient_example.py
.claude/: settings.local.json
.github/workflows/: bandit.yml  ci.yml  release.yml
Docs/: Elekta_XVI_Reconstruction_Directory_Analysis.md  GC_Elekta_Patient_Upload_Process.md  GUI_Walkthrough.md  LEARN_Upload_Automation_Plan.md  XVI export instructions.docx  elekta_rps_format_documentation.md  elekta_xvi_sro_experimental_validation.md
cbct-shifts/: compare_rps_mosaiq.py  report_patient_details.py
examples/: run_patient_example.py
learn_upload/: __init__.py  __main__.py  anonymise_dicom.py  config.py  folder_sort.py  gui.html  gui.py  gui_qt.py  utils.py  verify_pii.py
scripts/: dir_tree.py  elektafdt_crawler.py  extract_elekta_rps_matrices.py  inventory_crawler.py  read_dicom_tags.py
tests/: test_anonymise_dicom.py  test_folder_sort.py  test_inventory_crawler.py  test_utils.py  test_verify_pii.py
