[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "learn-upload"
version = "0.1.0"
description = "Automation tools for the LEARN data transfer pipeline"
requires-python = ">=3.9"
dependencies = [
    "pydicom>=3.0.1",
]

[project.optional-dependencies]
gui = ["PyQt6"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
